--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@ node_modules/
 .idea/
 *.iml
 
-# Yarn files
+# Pkg files
 .yarn/install-state.gz
 .yarn/build-state.yml
+package-lock.json
 
 # Environment variables
 .DS_Store
