--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "GoodBoyNeon",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf dist/ && tsc",
+    "build": "tsc --clean --build",
     "start": "node .",
     "dev": "bun --watch src/index.ts",
     "pretty": "prettier --write \"src/**/*.ts\""
